using sys.argv anyway for now

--- a/introspection/CMakeLists.txt
+++ b/introspection/CMakeLists.txt
@@ -17,7 +17,7 @@
 #ADD_DEFINITIONS(-D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS)
 
 INCLUDE_DIRECTORIES(
-  ${CMAKE_BINARY_DIR}/llvm-prefix/install/include
+  ${LLVM_INCLUDE_DIR}
 )
 
 ADD_EXECUTABLE(python_dump
